# libstack

./: .env  Cargo.toml
migrations/2023-05-29-102550_books/: up.sql
migrations/2023-05-29-103103_members/: down.sql  up.sql
migrations/2023-05-29-103109_loans/: down.sql  up.sql
src/: db.rs  errors.rs  main.rs  schema.rs
src/books/: handlers.rs  models.rs
src/loans/: handlers.rs  models.rs
src/members/: handlers.rs  models.rs
