[package]
name = "libstack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
anyhow = "1.0.71"
chrono = { version = "0.4.24", features = ["serde"] } 
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] } 
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
env_logger = "0.10.0"
lazy_static = "1.4.0"
listenfd = "1.0.1"
r2d2 = "0.8.10"
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["serde", "v4"] } 
